syntax = "proto3";
package com.stephen.learning.grpc.service;

enum GenderType{
  MALE = 0;
  FEMALE = 1;
}